# uni-tasks

./: CMakeLists.txt  README.md
app/: main.cpp
cmake/: bootstrap.cmake  fetch_external_libs.cmake
public/uni/: Types.hpp
public/uni/common/: PollEngine.hpp  Request.hpp  RequestCallbacks.hpp  RequestFactory.hpp  Runtime.hpp  RuntimeFactory.hpp  TaskDispatcher.hpp  TaskDispatcher.inl  TaskDispatcherBasic.hpp  TaskDispatcherBasic.inl  TaskDispatcherImpl.hpp
public/uni/common/details/: TaskDispatcherImpl.hpp
public/uni/concurrency/: Queue.hpp  ThreadPool.hpp  ThreadPoolImpl.hpp
public/uni/concurrency/details/: ThreadPoolImpl.hpp
public/uni/tasks/: ITask.hpp  MemFnTask.hpp  MemberFnTask.hpp  MemberFnTaskImpl.hpp  Task.hpp  TaskBase.hpp  TaskBaseImpl.hpp  TaskComparators.hpp  TaskFactory.hpp  TaskFactory.inl  TaskFactoryBasic.hpp  TaskFactoryBasic.inl  TaskFactoryImpl.hpp  TaskFactoryImpl.inl  TaskImpl.hpp  TaskUtils.hpp
public/uni/tasks/details/: MemberFnTask.hpp  MemberFnTaskImpl.hpp  Task.hpp  TaskFactory.inl  TaskFactoryBasic.inl  TaskFactoryImpl.hpp  TaskImpl.hpp  TaskUtils.hpp
public/uni/utils/: TypeTraits.hpp  Utils.hpp
src/uni/common/: PollEngine.cpp  PollEngineImpl.cpp  PollEngineImpl.hpp  Request.cpp  RequestFactory.cpp  RequestImpl.cpp  RequestImpl.hpp  Runtime.cpp  RuntimeFactory.cpp  RuntimeImpl.cpp  RuntimeImpl.hpp  TaskDispatcher.cpp  TaskDispatcherBasic.cpp  TaskDispatcherImpl.cpp
src/uni/concurrency/: Queue.hpp  ThreadPool.hpp
src/uni/tasks/: TaskBase.cpp  TaskBaseImpl.cpp
src/uni/utils/: Utils.cpp
tests/: CMakeLists.txt
tests/integration/: CMakeLists.txt
tests/integration/uni/common/: DemoComponent.cpp  DemoComponent.hpp  DemoComponentImpl.cpp  DemoComponentImpl.hpp  DemoComponentIntegrationTests.cpp  DemoComponentIntegrationTests.hpp  DemoComponentListener.hpp  DemoComponentTest.cpp  PollEngineIntegrationTests.cpp  PollEngineIntegrationTests.hpp  PollEngineTest.cpp  ThreadPoolConfiguration.hpp
tests/unit/: CMakeLists.txt
tests/unit/uni/common/: TaskDispatcherUnitTest.cpp  TaskDispatcherUnitTests.cpp  TaskDispatcherUnitTests.hpp
tests/unit/uni/concurrency/: ThreadPoolUnitTest.cpp  ThreadPoolUnitTests.cpp  ThreadPoolUnitTests.hpp
tests/unit/uni/tasks/: TasksUnitTest.cpp  TasksUnitTests.cpp  TasksUnitTests.hpp
